--- a/HW01/HW01.ipynb
+++ b/HW01/HW01.ipynb
@@ -9,68 +9,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "def grade_converter(grade):\n",
-    "    if grade >= 90:\n",
-    "        return \"A\"\n",
-    "    elif grade >= 80:\n",
-    "        return \"B\"\n",
-    "    elif grade >= 70:\n",
-    "        return \"C\"\n",
-    "    elif grade >= 65:\n",
-    "        return \"D\"\n",
-    "    else:\n",
-    "        return \"F\"\n",
-    "      \n",
-    "      \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A\n",
-      "C\n",
+      "Enter your grade50\n",
       "F\n"
      ]
     }
    ],
    "source": [
-    "print (grade_converter(92))\n",
-    "\n",
-    "\n",
-    "print (grade_converter(70))\n",
-    "\n",
-    "\n",
-    "print (grade_converter(61))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter your grade50\n"
-     ]
-    }
-   ],
-   "source": [
-    "grade = input(\"Enter your grade\")\n"
+    "grade = input(\"Enter your grade\")\n",
+    "grade = float(grade)\n",
+    "if grade >= 90:\n",
+    "   print (\"A\")\n",
+    "elif grade >= 80:\n",
+    "   print (\"B\")\n",
+    "elif grade >= 70:\n",
+    "   print (\"C\")\n",
+    "elif grade >= 65:\n",
+    "   print (\"D\")\n",
+    "else:\n",
+    "   print (\"F\")"
    ]
   },
   {
@@ -86,6 +49,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
