--- a/PYMID/midterm-m064810009.ipynb
+++ b/PYMID/midterm-m064810009.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 檔案有先整理過,原先官方給的檔案為big5,利用Notepad++將檔案改為utf-8\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 載入模組"
    ]
   },
@@ -26,7 +33,7 @@
    "metadata": {},
    "source": [
     "# 讀取檔案\n",
-    "## 利用未除息來訓練,除息後來檢定(認為市場交易的實際價格為為除息的價格,較能反應市場)"
+    "## 利用未除息來訓練,除息後來檢定(認為市場交易的實際價格為未除息的價格,較能反應市場)"
    ]
   },
   {
@@ -1839,7 +1846,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "label_encoder = preprocessing.LabelEncoder()\n",
@@ -2196,7 +2205,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "aim =[50,51,52,53,54,55,57,58,59,690,692,701,713,6201,6203,6204,6208]"
